@@ -3,6 +3,7 @@ package com.example.roommate.application.services;
 import com.example.roommate.annotations.ApplicationService;
 import com.example.roommate.application.data.RoomApplicationData;
 import com.example.roommate.exceptions.domainService.GeneralDomainException;
+import com.example.roommate.interfaces.entities.IWorkspace;
 import com.example.roommate.utility.IterableSupport;
 import com.example.roommate.values.domainValues.BookedTimeframe;
 import com.example.roommate.values.domainValues.IntermediateBookDataForm;
@@ -17,11 +18,11 @@ import jakarta.annotation.PostConstruct;
 
 import java.time.Duration;
 import java.util.*;
-import java.util.stream.Collectors;
 import java.time.LocalTime;
 import java.time.format.DateTimeFormatter;
 import java.time.LocalDate;
 import java.time.DayOfWeek;
+
 @ApplicationService
 @SuppressFBWarnings(value="EI2", justification="RoomDomainService is properly injected")
 public class BookingApplicationService {
@@ -39,16 +40,17 @@ public class BookingApplicationService {
     }
     public void addBookEntry(IntermediateBookDataForm form) throws NotFoundException, GeneralDomainException {
         if(form == null) throw new IllegalArgumentException();
-        UUID roomID = form.bookDataForm().id();
+        UUID workspaceId = form.bookDataForm().workspaceId();
+        UUID roomId = form.bookDataForm().roomId();
 
         List<BookedTimeframe> bookedTimeframes = IterableSupport.toList(form.bookingDays().toBookedTimeframes());
 
         try{
             for (BookedTimeframe bookedTimeframe : bookedTimeframes) {
-                roomDomainService.addBooking(bookedTimeframe,roomID);
+                roomDomainService.addBooking(bookedTimeframe,workspaceId,roomId);
             }
             if(bookedTimeframes.isEmpty())
-            throw new GeneralDomainException();
+                throw new GeneralDomainException();
         }
         catch (NotFoundRepositoryException e){
 
@@ -56,7 +58,7 @@ public class BookingApplicationService {
         }
     }
 
-    public Collection<ItemName> getItems() {
+    public Collection<ItemName> allItems() {
         return roomDomainService.getItems();
     }
 
@@ -64,8 +66,16 @@ public class BookingApplicationService {
         return roomDomainService.getRooms();
     }
 
-    public void addRoom(IRoom room) {
+    public void addRoom(IRoom room) throws NotFoundException {
         roomDomainService.addRoom(new RoomApplicationData(room.getRoomID(), room.getRoomNumber()));
+        if(!IterableSupport.toList(room.getWorkspaces()).isEmpty())
+            for (IWorkspace workspace : room.getWorkspaces()) {
+                try {
+                    roomDomainService.addWorkspace(room, workspace);
+                } catch (NotFoundRepositoryException e) {
+                    throw new NotFoundException();
+                }
+            }
     }
 
     public IRoom findRoomByID(UUID roomID) throws NotFoundException{
@@ -75,8 +85,19 @@ public class BookingApplicationService {
             throw new NotFoundException();
         }
     }
+    
+    public List<String> getItemsOfRoom(UUID roomId) throws NotFoundException {
+        List<String> items = new ArrayList<>();
+        IRoom room = findRoomByID(roomId);
+        for (IWorkspace workspace : room.getWorkspaces()) {
+            workspace.getItems().stream()
+                    .map(ItemName::type)
+                    .forEach(items::add);
+        }
+        return items;
+    }
 
-    public List<RoomBookingModel> findAvailableRoomsWithItems(List<ItemName> items, String dateString, String startTimeString, String endTimeString) {
+    public List<RoomBookingModel> findAvailableWorkspacesWithItems(List<ItemName> items, String dateString, String startTimeString, String endTimeString) {
         LocalDate date = LocalDate.parse(dateString);
         DayOfWeek dayOfWeek = date.getDayOfWeek();
 
@@ -87,19 +108,29 @@ public class BookingApplicationService {
 
         BookedTimeframe bookedTimeframe = new BookedTimeframe(dayOfWeek, startTime, duration);
 
-        return roomDomainService.getRooms().stream()
-                .filter(room -> new HashSet<>(IterableSupport.toList(room.getItemNames())).containsAll(items))
-                .filter(room -> RoomDomainService.isRoomAvailable(room, bookedTimeframe))
-                .map(x->new RoomBookingModel(x.getRoomID(),x.getRoomNumber().number(),x.getItemNames()))
-                .collect(Collectors.toList());
+        Collection<IRoom> rooms = roomDomainService.getRooms();
+        List<IRoom> availableRooms = rooms.stream()
+                .filter(room -> IterableSupport.toList(room.getWorkspaces()).stream()
+                        .anyMatch(workspace->RoomDomainService.isWorkspaceAvailable(workspace, bookedTimeframe))
+                )
+                .toList();
+        List<RoomBookingModel> availableWorkspaces = availableRooms.stream()
+                .flatMap(room -> IterableSupport.toList(room.getWorkspaces()).stream()
+                        .map(workspace ->
+                                new RoomBookingModel(room.getRoomID(), workspace.getId(), workspace.getWorkspaceNumber(), room.getRoomNumber().number(), workspace.getItems())
+                        )
+                ).toList();
+        return availableWorkspaces.stream()
+                .filter(rbm-> new HashSet<>(IterableSupport.toList(rbm.itemNameList())).containsAll(items))
+                .toList();
     }
 
-    public void removeItemFromRoom(UUID roomID, String itemName) throws NotFoundRepositoryException {
-        roomDomainService.removeItemFromRoom(roomID, itemName);
+    public void removeItemFromRoom(UUID workspaceID, String itemName, UUID roomID) throws NotFoundRepositoryException {
+        roomDomainService.removeItemFromWorkspace(workspaceID, itemName, roomID);
     }
 
-    public void addItemToRoom(UUID roomID, String itemName) throws NotFoundRepositoryException {
-        roomDomainService.addItemToRoom(roomID, itemName);
+    public void addItemToRoom(UUID workspaceID, String itemName, UUID roomID) throws NotFoundRepositoryException {
+        roomDomainService.addItemToWorkspace(workspaceID, itemName, roomID);
     }
 
     public void createItem(String itemName) {
